--- a/app/index.html
+++ b/app/index.html
@@ -7,11 +7,18 @@
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
-    
-  <div class="container">
-    <h1>Click this button OR DIE</h1>
 
-    <button class="btn" type="button"></button>
+  <div class="container">
+    <div class="row">
+      <div class="col-md4 col-md-offset-4">
+        <h1>Click this button OR DIE</h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-2 col-md-offset-5">
+        <button class="btn" type="button"></button>
+      </div>
+    </div>
   </div>
 
     <script src="js/bundle.js"></script>
