--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md4 col-md-offset-4">
-        <h1>Click this button OR DIE</h1>
+        <h1>Click this button OR ELSE</h1>
       </div>
     </div>
     <div class="row">
